--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>GOOD MORNING</h1>
+<p>mr boat man says this page is under construction</p>
 </body>
 </html>
