--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 ---
 layout: default
 ---
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Good morning</h1>
+<p>mr boat man has arrived and is attempting to learn</p>
+</body>
+</html>
