--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@ layout: default
 <body>
 <h1>Good morning</h1>
 <p>mr boat man has arrived and is attempting to learn</p>
+<p>he is also breaking his website with literally
+    every modification
+</p>
 </body>
 </html> 
