--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: default
 ---
 <!DOCTYPE html>
 <html>
+        <title>ayaya</title>
 <body>
+    
 <h1>Good morning</h1>
 <p>mr boat man has arrived and is attempting to learn</p>
 <p>he is also breaking his website with literally
