--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ layout: default
 <html>
 <body>
     
-<h1>Good morning</h1>
+<h1>Good morning (h1 test)</h1>
+<h2>Sub heading test (h2 test)</h2>
 <p>mr boat man has arrived and is attempting to learn</p>
 <p>he is also breaking his website with literally
     every modification
