--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ layout: default
 <h2>Sub heading test (h2 test)</h2>
 <p>mr boat man has arrived and is attempting to learn</p>
 <p>he is also breaking his website with literally
-    every modification
-</p>
+    every modification</p>
+    <div>
+        <p>I am testing a text division (div test)</p>
+    </div>
 </body>
 </html> 
