--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 <p>he is also breaking his website with literally
     every modification</p>
     <div>
-        <p>I am testing a text division (div test)</p>
+        <p>I am testing a <strong>bold</strong> text division (div test)</p>
     </div>
 </body>
 </html> 
