--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 <p>mr boat man has arrived and is attempting to learn</p>
 <p>he is also breaking his website with literally
     every modification</p>
-    <div>
+    <div style="background-image:linear-gradient(to right, cyan , rgb(91, 134, 255))"">
         <p>I am testing a <strong>bold</strong> text division (div test)</p>
     </div>
 </body>
