--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 <p>he is also breaking his website with literally
     every modification</p>
     <div style="background-image:linear-gradient(to right, rgb(160, 255, 247) , rgb(255, 159, 191))"">
-        <p>I am testing a <strong>bold</strong> text division (div test)</p>
+        <p>I am testing a <strong>bold</strong> and <em>italicized</em> text division (div test)</p>
     </div>
 </body>
 </html> 
