--- a/index.html
+++ b/index.html
@@ -13,5 +13,23 @@ layout: default
     <div style="background-image:linear-gradient(to right, rgb(160, 255, 247) , rgb(255, 159, 191))"">
         <p>I am testing a <strong>bold</strong> and <em>italicized</em> text division (div test)</p>
     </div>
+
+<table>
+    <tr>
+        <th><strong>Table Cell 1</strong></th>
+        <th><strong>Table Cell 2</strong></th>
+        <th><strong>Table Cell 3</strong></th>
+    </tr>
+    <tr>
+        <td>Table Cell 4</td>
+        <td>Table Cell 5</td>
+        <td>Table Cell 6</td>
+    </tr>
+    <tr>
+        <td>Table Cell 7</td>
+        <td>Table Cell 8</td>
+        <td>Table Cell 9</td>
+    </tr>
+</table>
 </body>
 </html> 
