--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@ layout: default
 <p>he is also breaking his website with literally
     every modification</p>
     <div style="background-image:linear-gradient(to right, rgb(160, 255, 247) , rgb(255, 159, 191))"">
+        <!--Applying a gradient and deciding colors was interesting-->
         <p>I am testing a <strong>bold</strong> and <em>italicized</em> text division (div test)</p>
+        <!--Didn't think <em> was used for italics-->
     </div>
 
 <table>
@@ -31,5 +33,18 @@ layout: default
         <td>Table Cell 9</td>
     </tr>
 </table>
+<ol>
+    <li>Ordered list bullet 1</li>
+    <li>Ordered list bullet 2</li>
+    <li>Ordered list bullet 3</li>
+    <li>Ordered list bullet 4</li>
+</ol>
+
+<ul>
+    <li>Unordered list bullet 1</li>
+    <li>Unordered list bullet 2</li>
+    <li>Unordered list bullet 3</li>
+    <li>Unordered list bullet 4</li>
+</ul>
 </body>
 </html> 
