--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ layout: default
         <td>Table Cell 9</td>
     </tr>
 </table>
+
 <ol>
     <li>Ordered list bullet 1</li>
     <li>Ordered list bullet 2</li>
@@ -46,5 +47,7 @@ layout: default
     <li>Unordered list bullet 3</li>
     <li>Unordered list bullet 4</li>
 </ul>
+
+<img src="https://www.ssbwiki.com/images/d/d9/SSBUWebsiteMarth1.jpg">
 </body>
 </html> 
