--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ layout: default
     <li>Unordered list bullet 4</li>
 </ul>
 
+<p>Here's a picture of Marth from Fire Emblem.</p>
 <img src="https://www.ssbwiki.com/images/d/d9/SSBUWebsiteMarth1.jpg">
 </body>
 </html> 
