--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@ layout: default
 <!DOCTYPE html>
 <html>
 <body>
-    
+    <!-- mlna made header1 pink-->
+<style>
+ h1{color: pink;} 
+ </style>
+
 <h1>Good morning (h1 test)</h1>
 <h2>Sub heading test (h2 test)</h2>
 <p>mr boat man has arrived and is attempting to learn</p>
