--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@ layout: default
     - Melina = mlna -->
 
 <!-- mlna - We're using <h1> for header 1, "A header?" -->
-<!-- antn - using inline CSS to add color to this header -->
+
+    <link rel="stylesheet" href="styles.css">
+    <!-- antn - using inline CSS to add color to this header -->
     <h1 style="color:cyan">A header?</h1>
 
     <!-- mlna - We're adding <p> to keep the next segment of text in normal format -->
