--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@ layout: default
 
 
     <link rel="stylesheet" href="styles.css">
-
+    body {
+        background-color: powderblue;
+      }
+      h1 {
+        color: blue;
+      }
+      p {
+        color: red;
+      }
     <!-- mlna - We're using <h1> for header 1, "A header?" -->
     <!-- antn - using inline CSS to add color to this header -->
     <h1 style="color:cyan">A header?</h1>
