--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@ layout: default
 ---
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="styles.css">   
+    body {
+        background: rgb(1, 1, 1);
+        }
+    h1 {
+        color: blue;
+        }
+    p {
+        color: red;
+        }
 <body>
 <h2>---------- NEW WORK STARTS HERE (copying from Melina's Page) ----------</h2>
 
@@ -17,16 +27,7 @@ layout: default
     - Melina = mlna -->
 
 
-    <link rel="stylesheet" href="styles.css">
-    body {
-        background-color: powderblue;
-      }
-      h1 {
-        color: blue;
-      }
-      p {
-        color: red;
-      }
+    
     <!-- mlna - We're using <h1> for header 1, "A header?" -->
     <!-- antn - using inline CSS to add color to this header -->
     <h1 style="color:cyan">A header?</h1>
