--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@ layout: default
 ---
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="styles.css">   
-    body {
-        background: rgb(1, 1, 1);
+    <head>
+        <link rel="stylesheet" href="styles.css">   
+        body {
+            background: rgb(1, 1, 1);
         }
-    h1 {
-        color: blue;
+        h1 {
+            color: blue;
         }
-    p {
-        color: red;
+        p {
+            color: red;
         }
+    </head>
 <body>
 <h2>---------- NEW WORK STARTS HERE (copying from Melina's Page) ----------</h2>
 
