--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@ layout: default
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">   
-        body {
-            background: rgb(1, 2, 1);
-        }
-        h1 {
-            color: blue;
-        }
-        p {
-            color: red;
-        }
+            <style>
+                    p {
+                      color: red;
+                      text-align: center;
+                    } 
+                    </style>
     </head>
 <body>
 <h2>---------- NEW WORK STARTS HERE (copying from Melina's Page) ----------</h2>
