--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@ layout: default
 <!DOCTYPE html>
 <html>
     <head>
-            <style>
-                    p {
-                      color: red;
-                      text-align: center;
-                    } 
-                    </style>
+        <style type="text/css">
+            p {
+                color: red;
+                text-align: center;
+            } 
+            .boxes {
+            background-color: rgb(236, 236, 236);
+            padding: 20px;
+            margin: 20px;
+            border: 3px solid black;
+            border-radius: 15px;
+            margin-left: auto;
+            margin-right: auto;
+            width: 80%;
+            max-width: 900px;
+            overflow: auto;
+            box-shadow: 5px 5px 5px;
+            }
+        </style>
     </head>
 <body>
 <h2>---------- NEW WORK STARTS HERE (copying from Melina's Page) ----------</h2>
