--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ layout: default
     <!-- antn - using inline CSS to add color to this header -->
     <h1 style="color:cyan">A header?</h1>
 
+    <div class="boxes">
     <!-- mlna - We're adding <p> to keep the next segment of text in normal format -->
     <p>A paragraph. This is under the first header. It's amazing. This class is super cool.
         I love this class. Amen.
@@ -57,6 +58,7 @@ layout: default
         <li>fish</li>
         <li>chicken</li>
     </ol>
+    </div>
 
     <!-- mlna - An image-->
     <p>An image of doge.</p>
