--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@ layout: default
                 color: red;
                 text-align: center;
             } 
+            h1 {
+                color: blue;
+                text-align: justify;
+            }
             .boxes {
             background-color: rgb(236, 236, 236);
             padding: 20px;
