--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ layout: default
                 color: blue;
                 text-align: justify;
             }
+            h2 {
+                color: palevioletred;
+                text-align: end;
+            }
             .boxes {
             background-color: rgb(236, 236, 236);
             padding: 20px;
