--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
         </style>
     </head>
 <body>
-<h2>---------- NEW WORK STARTS HERE (copying from Melina's Page) ----------</h2>
+<h2>----- NEW WORK STARTS HERE (copying from Melina's Page) -----</h2>
 
 <!-- LEADING COMMENT: PLEASE READ -->
 <!-- All of us (Andre, Anton, Melina) are working on Melina's github site 
