--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ layout: default
                 color: palevioletred;
                 text-align: end;
             }
+            em {
+                color: goldenrod;
+                text-emphasis: em;
+            }
             .boxes {
             background-color: rgb(236, 236, 236);
             padding: 20px;
