--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@ layout: default
     <!--andr We're using <h2> for a third header, "Wow, a third header." -->
     <h2> Wow, follow me on ig : andre_vanguardia.</h2>
     
-    
+    <p>There's some cool hidden text below. Hover over this text to show it!</p>
+    <p class="defaulthidden">I am so close to nuking this page and starting over.</p>
 
 </body>
 </html> 
