--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@ layout: default
             overflow: auto;
             box-shadow: 5px 5px 5px;
             }
+            div.showhidden p.defaulthidden {
+                visibility: hidden;
+            }
+            div.showhidden:hover p.defaulthidden {
+                visibility: visible;
+            }
         </style>
     </head>
 <body>
