--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@ layout: default
                 color: goldenrod;
                 text-emphasis: em;
             }
+            /* borrowing Mark's box because I liked it enough to try using it */
             .boxes {
             background-color: rgb(236, 236, 236);
             padding: 20px;
             margin: 20px;
-            border: 3px solid black;
+            border: 3px solid magenta;
             border-radius: 15px;
             margin-left: auto;
             margin-right: auto;
