--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@ layout: default
     <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Frank_ocean_green_hair.jpg">
     <!--andr We're using <h2> for a third header, "Wow, a third header." -->
     <h2> Wow, follow me on ig : andre_vanguardia.</h2>
-    
+    <div class="showhidden">
     <p>There's some cool hidden text below. Hover over this text to show it!</p>
     <p class="defaulthidden">I am so close to nuking this page and starting over.</p>
-
+</div>
 </body>
 </html> 
 
