--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
                 text-align: center;
             } 
             h1 {
-                color: blue;
+                color: rgb(208, 255, 249);
                 text-align: justify;
             }
             h2 {
@@ -150,7 +150,7 @@ layout: default
     <!--andr We're using <h2> for a third header, "Wow, a third header." -->
     <h2> Wow, follow me on ig : andre_vanguardia.</h2>
     <div class="showhidden">
-    <p>There's some cool hidden text below. Hover over this text to show it!</p>
+    <p>There's some cool hidden text below. Hover over this text to see what I'm thinking...</p>
     <p class="defaulthidden">I am so close to nuking this page and starting over.</p>
 </div>
 </body>
