--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ layout: default
             overflow: auto;
             box-shadow: 5px 5px 5px;
             }
+            /* a test to hide some text */
             div.showhidden p.defaulthidden {
                 visibility: hidden;
             }
