--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ layout: default
     <h2> Wow, follow me on ig : andre_vanguardia.</h2>
     <div class="showhidden">
     <p>There's some cool hidden text below. Hover over this text to see what I'm thinking...</p>
-    <p class="defaulthidden">I am so close to nuking this page and starting over.</p>
+    <p class="defaulthidden">I am |this| to nuking this page and starting over.</p>
 </div>
 </body>
 </html> 
