--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ layout: default
         </style>
     </head>
 <body>
+    <!-- meln made h2 pink too-->
+<style>
+h2{text-shadow: pink}</style>
 <h2>----- NEW WORK STARTS HERE (copying from Melina's Page) -----</h2>
 
 <!-- LEADING COMMENT: PLEASE READ -->
