--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ layout: default
             h2 {
                 color: palevioletred;
                 text-align: end;
+                text-shadow: pink;
             }
             em {
                 color: goldenrod;
