--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
             h2 {
                 color: palevioletred;
                 text-align: end;
-                text-shadow: pink;
+                text-shadow: pink 2px 2px 2px;
             }
             em {
                 color: goldenrod;
@@ -55,7 +55,7 @@ layout: default
     </head>
 <body>
     <!-- meln made h2 text shadow pink too-->
-    
+
 <h2>----- NEW WORK STARTS HERE (copying from Melina's Page) -----</h2>
 
 <!-- LEADING COMMENT: PLEASE READ -->
