--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ layout: default
             h2 {
                 color: palevioletred;
                 text-align: end;
-                text-shadow: pink 2px 2px 2px;
+                /*meln made header 2 shadow powder blue**/
+                text-shadow:powderblue 2px 2px;
             }
             em {
                 color: goldenrod;
@@ -54,7 +55,6 @@ layout: default
         </style>
     </head>
 <body>
-    <!-- meln made h2 text shadow pink too-->
 
 <h2>----- NEW WORK STARTS HERE (copying from Melina's Page) -----</h2>
 
