--- a/index.html
+++ b/index.html
@@ -65,7 +65,15 @@ layout: default
     - Melina = mlna -->
 
 
-    
+    <!-- antn - Two headers with two different style classes -->
+    <h1.rightblue>
+        Is this blue and right aligned?
+    </h1.rightblue>
+
+    <h1.leftred>
+        This is probably red and left aligned?
+    </h1.leftred>
+
     <!-- mlna - We're using <h1> for header 1, "A header?" -->
     <!-- antn - using inline CSS to add color to this header -->
     <div class="boxes">
