--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@ layout: default
                 color: goldenrod;
                 text-emphasis: em;
             }
+            /*meln made a cool text decoration**/
+            div.w{
+                text-decoration: underline;
+                text-decoration-style: wave;
+                text-decoration-color: greenyellow;
+            }
             /* borrowing Mark's box because I liked it enough to try using it */
             .boxes {
             background-color: rgb(236, 236, 236);
@@ -169,6 +175,7 @@ layout: default
     <p>There's some cool hidden text below. Hover over this text to see what I'm thinking...</p>
     <p class="defaulthidden">I am |this| to nuking this page and starting over.</p>
 </div>
+<div class ="w"><em> Look at these waves!</em></div>
 </body>
 </html> 
 
