--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@ layout: default
     <p>There's some cool hidden text below. Hover over this text to see what I'm thinking...</p>
     <p class="defaulthidden">I am |this| to nuking this page and starting over.</p>
 </div>
+<!--meln made this next line-->
 <div class ="w"><em> Look at these waves!</em></div>
 </body>
 </html> 
