--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@ layout: default
 
 
     <!-- antn - Two headers with two different style classes -->
-    <h1.rightblue>
+    <h1 style="rightblue">
         Is this blue and right aligned?
-    </h1.rightblue>
+    </h1>
 
-    <h1.leftred>
+    <h1 style="leftred">
         This is probably red and left aligned?
-    </h1.leftred>
+    </h1>
 
     <!-- mlna - We're using <h1> for header 1, "A header?" -->
     <!-- antn - using inline CSS to add color to this header -->
