--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
             }
             /*meln made a cool text decoration**/
             div.w{
-                text-decoration: underline;
+                text-decoration-line: underline;
                 text-decoration-style: wave;
                 text-decoration-color: greenyellow;
             }
