--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
             } 
             h1.rightblue {
                 color: blue;
-                text-align: right;
+                text-align: end;
             }
             h1.leftred {
                 color: red;
