--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
             } 
             h1.rightblue {
                 color: blue;
-                text-align: end;
+                text-align: right;
             }
             h1.leftred {
                 color: red;
@@ -72,11 +72,11 @@ layout: default
 
 
     <!-- antn - Two headers with two different style classes -->
-    <h1 style="rightblue">
+    <h1 class="rightblue">
         Is this blue and right aligned?
     </h1>
 
-    <h1 style="leftred">
+    <h1 class="leftred">
         This is probably red and left aligned?
     </h1>
 
