--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@ layout: default
                 text-decoration-style: wave;
                 text-decoration-color: greenyellow;
             }
+            /*meln made text stretched**/
+            div.s{
+                font-stretch: extra-expanded;
+            }
             /* borrowing Mark's box because I liked it enough to try using it */
             .boxes {
             background-color: rgb(236, 236, 236);
@@ -180,7 +184,7 @@ layout: default
     <p class="defaulthidden">I am |this| to nuking this page and starting over.</p>
 </div>
 <!--meln made this next line-->
-<div class ="w"><em> Look at these waves!</em></div>
+<div class ="w" class="s"><em> Look at these waves!</em></div>
 </body>
 </html> 
 
