--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@ layout: default
 <html>
     <head>
         <style type="text/css">
+        /* antn - making some paragraph text red and center aligned */
             p {
                 color: red;
                 text-align: center;
             } 
+
+            /* antn - making two different header classes with different alignments and different colors */
             h1.rightblue {
                 color: blue;
                 text-align: right;
