--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ layout: default
             /*meln made text stretched**/
             div.s{
                 font-stretch: extra-expanded;
+                font-weight:100;
             }
             /* borrowing Mark's box because I liked it enough to try using it */
             .boxes {
