--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ layout: default
 <!-- Key for Edits: 
     - Andre  = andr
     - Anton  = antn
-    - Melina = mlna -->
+    - Melina = mlna/meln -->
 
 
     <!-- antn - Two headers with two different style classes -->
