--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@ layout: default
             background-color: rgb(236, 236, 236);
             padding: 20px;
             margin: 20px;
-            border: 3px solid magenta;
-            border-radius: 15px;
+            border: 3px solid lightseagreen;
             margin-left: auto;
             margin-right: auto;
             width: 80%;
