--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ layout: default
             width: 80%;
             max-width: 900px;
             overflow: auto;
-            box-shadow: 5px 5px 5px;
+            box-shadow: 5px 7px 7px hotpink;
         }
 
         /* a test to hide some text */
