--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ layout: default
     <p class="defaulthidden">I am |this| to nuking this page and starting over.</p>
 </div>
 <!--meln made this next line-->
-<div class ="w", class="s"><em> Look at these waves!</em></div>
+<div class ="w" class="s"><em> Look at these waves!</em></div>
 </body>
 </html> 
 
