--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
         /*meln made a cool text decoration**/
         div.w {
             text-decoration-line: underline;
-            text-decoration-style: wave;
+            text-decoration-style: wavy;
             text-decoration-color: greenyellow;
         }
 
@@ -61,7 +61,7 @@ layout: default
             width: 80%;
             max-width: 900px;
             overflow: auto;
-            box-shadow: 5px 7px 7px hotpink;
+            box-shadow: 2px 5px 10px hotpink;
         }
 
         /* a test to hide some text */
@@ -201,7 +201,7 @@ layout: default
         <h2> Wow, follow me on ig : andre_vanguardia.</h2>
         <div class="showhidden">
             <p>There's some cool hidden text below. Hover over this text to see what I'm thinking...</p>
-            <p class="defaulthidden">I am |this| to nuking this page and starting over.</p>
+            <p class="defaulthidden" style="color:black">I am |this| to nuking this page and starting over.</p>
         </div>
         <!--meln made this next line-->
         <div class="w" class="s"><em> Look at these waves!</em></div>
