--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: default
 
         /*meln made text stretched**/
         div.s {
-            font-stretch: extra-expanded;
+            font-variant-east-asian: proportional-width;
             font-weight: 100;
         }
 
