--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: default
 
         /*meln made text stretched**/
         div.s {
-            font-variant-east-asian: proportional-width;
+            font-variant:unset;
             font-weight: 900;
         }
 
