--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: default
 
         /*meln made text stretched**/
         div.s {
-            font-variant:unset;
+            font-variant:small-caps;
             font-weight: 900;
         }
 
@@ -204,7 +204,7 @@ layout: default
     <p class="defaulthidden">I am |this| to nuking this page and starting over.</p>
 </div>
 <!--meln made this next line-->
-<div class ="w" class="s"><em> Look at these waves!</em></div>
+<div class ="w" class="s"><em> Look At These Waves!</em></div>
 
         
 </body>
