--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <html>
 
 <head>
-    <link rel=styleTest" type="text/css" href="styleTest.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <style type="text/css">
         /* antn - making some paragraph text red and center aligned */
         p {
