--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ layout: default
             <p class="defaulthidden">I am |this| to nuking this page and starting over.</p>
         </div>
         <!--meln made this next line-->
-        <div class="w" class="s"><em> Look At These Waves!</em></div>
-
+        <div class="w"><em> Look At These Waves!</em></div>
+        <div class = "s">SMALL CAPS!</div>
 
 </body>
 
