--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ layout: default
             <img src="https://www.ssbwiki.com/images/e/eb/SSBUWebsiteJoker1.jpg" , alt="Joker from 
             Persona 5, appearing in Super Smash Bros Ultimate.">
             <div class="overlay">
-                
+                <div class="text">Take your heart.</div>
             </div>
         </div>
         
