--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 
-    <h2>----- NEW WORK STARTS HERE (copying from Melina's Page) -----</h2>
+    <h2>----- NEW WORK CSS STARTS HERE (copying from Melina's Page) -----</h2>
 
     <!-- LEADING COMMENT: PLEASE READ -->
     <!-- All of us (Andre, Anton, Melina) are working on Melina's github site 
@@ -44,6 +44,8 @@
 
 
     <!-- antn - Two headers with two different style classes -->
+    <div class="row">
+
     <h1 class="rightblue">
         Is this blue and right aligned?
     </h1>
@@ -51,6 +53,7 @@
     <h1 class="leftred">
         This is probably red and left aligned?
     </h1>
+</div>
 
     <!-- mlna - We're using <h1> for header 1, "A header?" -->
     <!-- antn - using inline CSS to add color to this header -->
@@ -165,6 +168,8 @@
         <!--meln made this next line-->
         <div class="w"><em> Look At These Waves!</em></div>
         <div class="s">SMALL CAPS!</div>
+
+
 </body>
 
 </html>
