--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
     <!-- antn - Two headers with two different style classes -->
-    <div class="row">
+
 
     <h1 class="rightblue">
         Is this blue and right aligned?
@@ -53,7 +53,7 @@
     <h1 class="leftred">
         This is probably red and left aligned?
     </h1>
-</div>
+
 
     <!-- mlna - We're using <h1> for header 1, "A header?" -->
     <!-- antn - using inline CSS to add color to this header -->
@@ -98,8 +98,8 @@
         <div> -->
     <div style="background-image:linear-gradient(to right, rgb(160, 255, 247) , rgb(255, 159, 191))"">
         <p>c o l o r f u l t e x t</p>
-    </div>
     
+</div>
     <!-- antn - We're making a table. Using <table> to start off the code
         so VSC knows we want to make a table.-->
     <table>
@@ -169,6 +169,37 @@
         <div class="w"><em> Look At These Waves!</em></div>
         <div class="s">SMALL CAPS!</div>
 
+
+
+        <div class="row">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vestibulum libero non dui tincidunt,
+                    id aliquam urna rhoncus. Quisque at convallis elit. Suspendisse et arcu mollis, volutpat velit id,
+                    porta ex. Mauris sed eros dapibus, malesuada magna non, egestas velit. Nam accumsan bibendum turpis,
+                    non malesuada nisl. Curabitur ipsum mi, vulputate sed libero non, hendrerit condimentum nisi.
+                    Vestibulum turpis purus, maximus at tellus vitae, tincidunt faucibus quam.</p>
+            </div>
+            <div class="col">
+                <p>Vestibulum pharetra id nunc at fermentum. In at lacus efficitur, eleifend lectus in, blandit nulla.
+                    Nam sit amet enim orci. Nunc efficitur varius massa, aliquam ullamcorper risus eleifend ut. Quisque
+                    vitae bibendum enim, eget congue urna. Sed vulputate sagittis ultrices. Aliquam varius commodo lacus
+                    nec ornare. Donec et convallis ligula, at venenatis nisl. Etiam vel tincidunt est. Nullam vulputate
+                    euismod nisi ac vestibulum. Fusce ullamcorper augue ac libero interdum, sit amet dictum eros
+                    faucibus. Quisque dapibus ex vitae ex venenatis, id pharetra nibh iaculis. Aliquam fermentum arcu
+                    nec risus egestas, nec finibus arcu pretium. Praesent rutrum urna at mauris tempor dapibus.
+                    Pellentesque nec turpis convallis, molestie mauris et, rhoncus elit. Proin cursus dignissim nibh
+                    vitae consequat.</p>
+            </div>
+            <div class="col">
+                <p>Etiam ultricies sem leo, eget consectetur eros finibus non. Fusce lacus ipsum, vestibulum nec sapien
+                    nec, lobortis interdum tortor. Nulla tincidunt ex purus, in pellentesque turpis placerat eget. Donec
+                    finibus sollicitudin sollicitudin. Maecenas bibendum nunc eget pellentesque sollicitudin. Vivamus
+                    suscipit enim vel eros ornare ultricies. Fusce sed condimentum libero, vitae fringilla erat. Nunc
+                    non ullamcorper lacus, sit amet tempus sem. Nam quis tempus tortor. Sed venenatis augue lacus, quis
+                    egestas nisl tincidunt nec. Pellentesque sapien lacus, accumsan vel ipsum ac, lacinia aliquet purus.
+                </p>
+            </div>
+        </div>
 
 </body>
 
