--- a/index.html
+++ b/index.html
@@ -172,7 +172,10 @@
 
 
         <div class="row">
+            
+            
             <div class="col">
+                    <h2>The first three paragraphs of <em>lorem ipsum</em>.</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vestibulum libero non dui tincidunt,
                     id aliquam urna rhoncus. Quisque at convallis elit. Suspendisse et arcu mollis, volutpat velit id,
                     porta ex. Mauris sed eros dapibus, malesuada magna non, egestas velit. Nam accumsan bibendum turpis,
