--- a/index.html
+++ b/index.html
@@ -172,15 +172,18 @@
 
 
         <div class="row">
-            
-            
+
+
             <div class="col">
-                    <h2>The first three paragraphs of <em>lorem ipsum</em>.</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vestibulum libero non dui tincidunt,
-                    id aliquam urna rhoncus. Quisque at convallis elit. Suspendisse et arcu mollis, volutpat velit id,
-                    porta ex. Mauris sed eros dapibus, malesuada magna non, egestas velit. Nam accumsan bibendum turpis,
-                    non malesuada nisl. Curabitur ipsum mi, vulputate sed libero non, hendrerit condimentum nisi.
-                    Vestibulum turpis purus, maximus at tellus vitae, tincidunt faucibus quam.</p>
+                <h2>The first three paragraphs of <p class="text-center"><a href="https://loremipsum.io/" role="button">lorem ipsum</a></p></em>.</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vestibulum libero non dui
+                        tincidunt,
+                        id aliquam urna rhoncus. Quisque at convallis elit. Suspendisse et arcu mollis, volutpat velit
+                        id,
+                        porta ex. Mauris sed eros dapibus, malesuada magna non, egestas velit. Nam accumsan bibendum
+                        turpis,
+                        non malesuada nisl. Curabitur ipsum mi, vulputate sed libero non, hendrerit condimentum nisi.
+                        Vestibulum turpis purus, maximus at tellus vitae, tincidunt faucibus quam.</p>
             </div>
             <div class="col">
                 <p>Vestibulum pharetra id nunc at fermentum. In at lacus efficitur, eleifend lectus in, blandit nulla.
