--- a/index.html
+++ b/index.html
@@ -168,10 +168,16 @@
         <!--meln made this next line-->
         <div class="w"><em> Look At These Waves!</em></div>
         <div class="s">SMALL CAPS!</div>
-        <!-- meln making a grid-->
+        <!-- meln making a grid of pikachus-->
         <div class = "img-container">
                 <img src= "https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png" alt="suprised pikachu" style="width:100%;">
             </div>
+        <div class = "img-container">
+            <img src= "https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png" alt="suprised pikachu" style="width:100%;">
+            </div>
+         <div class = "img-container">
+         <img src= "https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png" alt="suprised pikachu" style="width:100%;">
+             </div>
 
 
         <div class="row">
