--- a/index.html
+++ b/index.html
@@ -168,25 +168,34 @@
         <!--meln made this next line-->
         <div class="w"><em> Look At These Waves!</em></div>
         <div class="s">SMALL CAPS!</div>
-        <!-- meln making a grid-->
-        <div class = "img-container">
-                <img src= "https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png" alt="suprised pikachu" style="width:100%;">
-            </div>
 
+        <!-- antn putting Melina's grid into a row -->
 
         <div class="row">
+            <!-- meln making a grid-->
+            <div class="img-container">
+                <img src="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png"
+                    alt="suprised pikachu" style="width:100%;">
+            </div>
+        </div>
 
 
+        <!-- antn making a row with three columns containing three paragraphs of lorem ipsum -->
+        <div class="row">
             <div class="col">
-                <h2>The first three paragraphs of <p class="text-center"><a href="https://loremipsum.io/" role="button">lorem ipsum</a></p></em>.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vestibulum libero non dui
-                        tincidunt,
-                        id aliquam urna rhoncus. Quisque at convallis elit. Suspendisse et arcu mollis, volutpat velit
-                        id,
-                        porta ex. Mauris sed eros dapibus, malesuada magna non, egestas velit. Nam accumsan bibendum
-                        turpis,
-                        non malesuada nisl. Curabitur ipsum mi, vulputate sed libero non, hendrerit condimentum nisi.
-                        Vestibulum turpis purus, maximus at tellus vitae, tincidunt faucibus quam.</p>
+                <h3 style="color:palevioletred" class="text-center">The first three paragraphs of </h3>
+
+                <!-- antn adding a hyper link that directs to what lorem ipsum is -->
+                <h1 class="text-center"><a href="https://loremipsum.io/" class="btn btn-info btn-lg" role="button">lorem
+                        ipsum</a></h1></em>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vestibulum libero non dui
+                    tincidunt,
+                    id aliquam urna rhoncus. Quisque at convallis elit. Suspendisse et arcu mollis, volutpat velit
+                    id,
+                    porta ex. Mauris sed eros dapibus, malesuada magna non, egestas velit. Nam accumsan bibendum
+                    turpis,
+                    non malesuada nisl. Curabitur ipsum mi, vulputate sed libero non, hendrerit condimentum nisi.
+                    Vestibulum turpis purus, maximus at tellus vitae, tincidunt faucibus quam.</p>
             </div>
             <div class="col">
                 <p>Vestibulum pharetra id nunc at fermentum. In at lacus efficitur, eleifend lectus in, blandit nulla.
