--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-<body>
+<body style="background-image:linear-gradient(to bottom, rgb(255, 239, 246), rgb(229, 239, 255)">
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -169,7 +169,8 @@
         <div class="w"><em> Look At These Waves!</em></div>
         <div class="s">SMALL CAPS!</div>
 
-        <!-- antn putting Melina's grid into a row -->
+        <!-- antn putting Melina's grid into a row 
+        edit: stealing this image section too-->
 
         <div class="row">
             <!-- meln making a grid-->
@@ -219,15 +220,18 @@
             </div>
         </div>
         <!-- meln making a grid of pikachus-->
-        <div class = "img-container">
-                <img src= "https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png" alt="suprised pikachu" style="width:100%;">
-            </div>
-        <div class = "img-container">
-            <img src= "https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png" alt="suprised pikachu" style="width:100%;">
-            </div>
-         <div class = "img-container">
-         <img src= "https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png" alt="suprised pikachu" style="width:100%;">
-             </div>
+        <div class="img-container">
+            <img src="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png"
+                alt="suprised pikachu" style="width:100%;">
+        </div>
+        <div class="img-container">
+            <img src="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png"
+                alt="suprised pikachu" style="width:100%;">
+        </div>
+        <div class="img-container">
+            <img src="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png"
+                alt="suprised pikachu" style="width:100%;">
+        </div>
 </body>
 
 </html>
