--- a/index.html
+++ b/index.html
@@ -169,17 +169,54 @@
         <div class="w"><em> Look At These Waves!</em></div>
         <div class="s">SMALL CAPS!</div>
 
-        <!-- antn putting Melina's grid into a row 
-        edit: stealing this image section too-->
 
+        <!-- antn putting Melina's grid into a row 
+        edit: stealing this image section too since Melina moved her image grid-->
         <div class="row">
             <!-- meln making a grid-->
             <div class="img-container">
-                <img src="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png"
-                    alt="suprised pikachu" style="width:100%;">
+                <img src="https://www.ssbwiki.com/images/f/f9/SSBUWebsiteBayonetta1.jpg" alt="ssbu bayonetta 1"
+                    style="width:100%;">
             </div>
+            <div class="img-container">
+                <img src="https://www.ssbwiki.com/images/3/3d/SSBUWebsiteBayonetta2.jpg" alt="ssbu bayonetta 2"
+                    style="width:100%;">
+            </div>
+            <div class="img-container">
+                <img src="https://www.ssbwiki.com/images/7/7d/SSBUWebsite23.jpg" alt="ssbu bayonetta 3"
+                    style="width:100%;">
+            </div>
+
         </div>
 
+        <!-- antn - A table in a box -->
+        <div class="row">
+            <h1>A table I guess</h1>
+            <table class="table table-striped table-dark">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Ranking Smash Ultimate Characters</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <td>1</td>
+                    <td>Play</td>
+                </tbody>
+                <tbody>
+                    <td>2</td>
+                    <td>who</td>
+                </tbody>
+                <tbody>
+                    <td>3</td>
+                    <td>you</td>
+                </tbody>
+                <tbody>
+                    <td>4</td>
+                    <td>like</td>
+                </tbody>
+            </table>
+        </div>
 
         <!-- antn making a row with three columns containing three paragraphs of lorem ipsum -->
         <div class="row">
@@ -199,23 +236,34 @@
                     Vestibulum turpis purus, maximus at tellus vitae, tincidunt faucibus quam.</p>
             </div>
             <div class="col">
-                <p>Vestibulum pharetra id nunc at fermentum. In at lacus efficitur, eleifend lectus in, blandit nulla.
-                    Nam sit amet enim orci. Nunc efficitur varius massa, aliquam ullamcorper risus eleifend ut. Quisque
-                    vitae bibendum enim, eget congue urna. Sed vulputate sagittis ultrices. Aliquam varius commodo lacus
-                    nec ornare. Donec et convallis ligula, at venenatis nisl. Etiam vel tincidunt est. Nullam vulputate
+                <p>Vestibulum pharetra id nunc at fermentum. In at lacus efficitur, eleifend lectus in, blandit
+                    nulla.
+                    Nam sit amet enim orci. Nunc efficitur varius massa, aliquam ullamcorper risus eleifend ut.
+                    Quisque
+                    vitae bibendum enim, eget congue urna. Sed vulputate sagittis ultrices. Aliquam varius commodo
+                    lacus
+                    nec ornare. Donec et convallis ligula, at venenatis nisl. Etiam vel tincidunt est. Nullam
+                    vulputate
                     euismod nisi ac vestibulum. Fusce ullamcorper augue ac libero interdum, sit amet dictum eros
-                    faucibus. Quisque dapibus ex vitae ex venenatis, id pharetra nibh iaculis. Aliquam fermentum arcu
+                    faucibus. Quisque dapibus ex vitae ex venenatis, id pharetra nibh iaculis. Aliquam fermentum
+                    arcu
                     nec risus egestas, nec finibus arcu pretium. Praesent rutrum urna at mauris tempor dapibus.
                     Pellentesque nec turpis convallis, molestie mauris et, rhoncus elit. Proin cursus dignissim nibh
                     vitae consequat.</p>
             </div>
             <div class="col">
-                <p>Etiam ultricies sem leo, eget consectetur eros finibus non. Fusce lacus ipsum, vestibulum nec sapien
-                    nec, lobortis interdum tortor. Nulla tincidunt ex purus, in pellentesque turpis placerat eget. Donec
-                    finibus sollicitudin sollicitudin. Maecenas bibendum nunc eget pellentesque sollicitudin. Vivamus
-                    suscipit enim vel eros ornare ultricies. Fusce sed condimentum libero, vitae fringilla erat. Nunc
-                    non ullamcorper lacus, sit amet tempus sem. Nam quis tempus tortor. Sed venenatis augue lacus, quis
-                    egestas nisl tincidunt nec. Pellentesque sapien lacus, accumsan vel ipsum ac, lacinia aliquet purus.
+                <p>Etiam ultricies sem leo, eget consectetur eros finibus non. Fusce lacus ipsum, vestibulum nec
+                    sapien
+                    nec, lobortis interdum tortor. Nulla tincidunt ex purus, in pellentesque turpis placerat eget.
+                    Donec
+                    finibus sollicitudin sollicitudin. Maecenas bibendum nunc eget pellentesque sollicitudin.
+                    Vivamus
+                    suscipit enim vel eros ornare ultricies. Fusce sed condimentum libero, vitae fringilla erat.
+                    Nunc
+                    non ullamcorper lacus, sit amet tempus sem. Nam quis tempus tortor. Sed venenatis augue lacus,
+                    quis
+                    egestas nisl tincidunt nec. Pellentesque sapien lacus, accumsan vel ipsum ac, lacinia aliquet
+                    purus.
                 </p>
             </div>
         </div>
