--- a/index.html
+++ b/index.html
@@ -215,6 +215,36 @@
          <div class = "img-container">
          <img src= "https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png" alt="suprised pikachu" style="width:100%;">
              </div>
+    <!--meln making text with a button-->
+    <div class = "row2">
+        <div class = "col">
+            <h2> The first half of Despacito by Luis Fonsi</h2><p class="text-center"><a href="https://www.youtube.com/watch?v=kJQP7kiw5Fk" role="button">DeSPaCiTo</a></p></em>.</h1>
+            <p2>Ay! Fonsi DY! Oh! <em2>Oh no, oh no!</em2> Oh yeah. Diridiri, dirididi Daddy. Go! 
+                Sí, sabes que ya llevo un rato mirándote.
+                Tengo que bailar contigo hoy. (DY) 
+                Vi que tu mirada ya estaba llamándome.
+                Muéstrame el camino que yo voy. (Oh)</p2>
+        </div>
+        <div class = "col">
+            <p2>Tú, tú eres el imán y yo soy el metal.
+                    Me voy acercando y voy armando el plan. 
+                    Solo con pensarlo se acelera el pulso. (Oh yeah)
+                    Ya, ya me está gustando más de lo normal. 
+                    Todos mis sentidos van pidiendo más. 
+                    Esto hay que tomarlo sin ningún apuro.</p2>
+        </div>
+        <div class = "col">
+            <p2><em3>DESPACITO!</em3>
+                    Quiero respirar tu cuello despacito.
+                    Deja que te diga cosas al oído.
+                    Para que te acuerdes si no estás conmigo
+                    <em3>DESPACITO!</em3>
+                    Quiero desnudarte a besos despacito 
+                    Firmo en las paredes de tu laberinto 
+                    Y hacer de tu cuerpo todo un manuscrito (sube, sube, sube)
+                    (Sube, sube)</p2>
+        </div>
+        </div>
 </body>
 
 </html>
