--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <!--meln making text with a button-->
     <div class = "row2">
         <div class = "col">
-            <h2> The first half of Despacito by Luis Fonsi</h2><p class="text-center"><a href="https://www.youtube.com/watch?v=kJQP7kiw5Fk" role="button">DeSPaCiTo</a></p></em>.</h1>
+            <h2> The first half of Despacito by Luis Fonsi</h2><h1><p class="text-center"><a href="https://www.youtube.com/watch?v=kJQP7kiw5Fk"class="btn btn-info btn-lg" role="button">DeSPaCiTo</a></p></em></h1>
             <p2>Ay! Fonsi DY! Oh! <em2>Oh no, oh no!</em2> Oh yeah. Diridiri, dirididi Daddy. Go! 
                 Sí, sabes que ya llevo un rato mirándote.
                 Tengo que bailar contigo hoy. (DY) 
@@ -299,12 +299,23 @@
             <p2><em3>DESPACITO!</em3>
                     Quiero respirar tu cuello despacito.
                     Deja que te diga cosas al oído.
-                    Para que te acuerdes si no estás conmigo
+                    Para que te acuerdes si no estás conmigo.
                     <em3>DESPACITO!</em3>
-                    Quiero desnudarte a besos despacito 
-                    Firmo en las paredes de tu laberinto 
-                    Y hacer de tu cuerpo todo un manuscrito (sube, sube, sube)
+                    Quiero desnudarte a besos despacito.
+                    Firmo en las paredes de tu laberinto.
+                    Y hacer de tu cuerpo todo un manuscrito. (sube, sube, sube)
                     (Sube, sube)</p2>
+        <div class = "col">
+            <p2>
+                    Quiero ver bailar tu pelo. 
+                    Quiero ser tu ritmo.
+                    Que le enseñes a mi boca. 
+                    Tus lugares favoritos. (favoritos, favoritos baby)
+                    Déjame sobrepasar tus zonas de peligro.
+                    Hasta provocar tus gritos. 
+                    Y que olvides tu apellido. (Diridiri, dirididi Daddy)
+            </p2>
+        </div>
         </div>
         <div class="img-container">
             <img src="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png"
