--- a/index.html
+++ b/index.html
@@ -281,32 +281,32 @@
     <div class = "row2">
         <div class = "col">
             <h2> The first half of Despacito by Luis Fonsi</h2><h1><p class="text-center"><a href="https://www.youtube.com/watch?v=kJQP7kiw5Fk"class="btn btn-info btn-lg" role="button">DeSPaCiTo</a></p></em></h1>
-            <p2>Ay! Fonsi DY! Oh! <em2>Oh no, oh no!</em2> Oh yeah. Diridiri, dirididi Daddy. Go! 
+            <p class = "two">Ay! Fonsi DY! Oh! <em class = "two">Oh no, oh no!</em> Oh yeah. Diridiri, dirididi Daddy. Go! 
                 Sí, sabes que ya llevo un rato mirándote.
                 Tengo que bailar contigo hoy. (DY) 
                 Vi que tu mirada ya estaba llamándome.
-                Muéstrame el camino que yo voy. (Oh)</p2>
+                Muéstrame el camino que yo voy. (Oh)</p>
         </div>
         <div class = "col">
-            <p2>Tú, tú eres el imán y yo soy el metal.
+            <p class = "two">Tú, tú eres el imán y yo soy el metal.
                     Me voy acercando y voy armando el plan. 
                     Solo con pensarlo se acelera el pulso. (Oh yeah)
                     Ya, ya me está gustando más de lo normal. 
                     Todos mis sentidos van pidiendo más. 
-                    Esto hay que tomarlo sin ningún apuro.</p2>
+                    Esto hay que tomarlo sin ningún apuro.</p>
         </div>
         <div class = "col">
-            <p2><em3>DESPACITO!</em3>
+            <p class = "two"><em class = "three">DESPACITO!</em>
                     Quiero respirar tu cuello despacito.
                     Deja que te diga cosas al oído.
                     Para que te acuerdes si no estás conmigo.
-                    <em3>DESPACITO!</em3>
+                    <em class = "three">DESPACITO!</em>
                     Quiero desnudarte a besos despacito.
                     Firmo en las paredes de tu laberinto.
                     Y hacer de tu cuerpo todo un manuscrito. (sube, sube, sube)
-                    (Sube, sube)</p2>
+                    (Sube, sube)</p>
         <div class = "col">
-            <p2>
+            <p class = "two">
                     Quiero ver bailar tu pelo. 
                     Quiero ser tu ritmo.
                     Que le enseñes a mi boca. 
@@ -314,7 +314,7 @@
                     Déjame sobrepasar tus zonas de peligro.
                     Hasta provocar tus gritos. 
                     Y que olvides tu apellido. (Diridiri, dirididi Daddy)
-            </p2>
+            </p>
         </div>
         </div>
         <div class="img-container">
