--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
                 alt="suprised pikachu" style="width:100%;">
         </div>
         <!-- meln table-->
-        <div class="row">
-            <h1>A table </h1>
+        <div class="row2">
+            <h1>A table</h1>
             <table class="table table-striped table-dark">
                 <thead>
                     <tr>
