--- a/index.html
+++ b/index.html
@@ -42,36 +42,29 @@
     - Anton  = antn
     - Melina = mlna/meln -->
 
-    <!-- antn - nav bar test (reference: w3schools) -->
-    <nav class="navbar <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" href="#">king of boats</a>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-            aria-expanded="false" aria-label="Toggle navigation">
+    <!-- antn - nav bar test (reference: w3schools + sample bootstrap page by Mark) -->
+    <nav class="pl-md-5 navbar navbar-expand-md bg-light navbar-light fixed-top">
+        <a class="navbar-brand" href="https://atn30nguyen.github.io/">king of boats</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://markdangerchen.github.io/samplebootstrap.html">aaaa?</a>
-                </li>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="index.html">Syllabus+Info</a></li>
+                <li class="nav-item"><a class="nav-link" href="assignments.html">Assignments</a></li>
+                <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownId">
-                        <a class="dropdown-item" href="#">Action 1</a>
-                        <a class="dropdown-item" href="#">Action 2</a>
+                    <a class="nav-link active dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Sample Pages</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="samplehtml.html">Sample HTML</a>
+                        <a class="dropdown-item" href="samplecss.html">Sample CSS</a>
+                        <a class="dropdown-item" href="samplebootstrap.html">Sample Bootstrap</a>
+                        <a class="dropdown-item" href="samplejs.html">Sample JS</a>
                     </div>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
-
 
     <!-- antn - Two headers with two different style classes -->
 
