--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 </p>
             </div>
         </div>
-        <!-- meln making a grid of pikachus-->
+        <!-- meln making a grid of pikachus, hover doesn't work-->
         <div class="img-container">
             <img src="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png"
                 alt="suprised pikachu" style="width:100%;">
