--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
         </button>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="index.html">Syllabus+Info</a></li>
-                <li class="nav-item"><a class="nav-link" href="assignments.html">Assignments</a></li>
-                <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">i</a></li>
+                <li class="nav-item"><a class="nav-link" href="assignments.html">don't</a></li>
+                <li class="nav-item"><a class="nav-link" href="resources.html">have</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link active dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Sample Pages</a>
+                    <a class="nav-link active dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">links</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="samplehtml.html">Sample HTML</a>
-                        <a class="dropdown-item" href="samplecss.html">Sample CSS</a>
-                        <a class="dropdown-item" href="samplebootstrap.html">Sample Bootstrap</a>
-                        <a class="dropdown-item" href="samplejs.html">Sample JS</a>
+                        <a class="dropdown-item" href="samplehtml.html">here's</a>
+                        <a class="dropdown-item" href="samplecss.html">some</a>
+                        <a class="dropdown-item" href="samplebootstrap.html">music</a>
+                        <a class="dropdown-item" href="samplejs.html">i guess</a>
                     </div>
                 </li>
             </ul>
