--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
         </button>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="index.html">i</a></li>
-                <li class="nav-item"><a class="nav-link" href="assignments.html">don't</a></li>
-                <li class="nav-item"><a class="nav-link" href="resources.html">have</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://markdangerchen.github.io/samplehtml.html">i</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://markdangerchen.github.io/samplecss.html">don't</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://markdangerchen.github.io/samplebootstrap.html">have</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link active dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">links</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="samplehtml.html">here's</a>
-                        <a class="dropdown-item" href="samplecss.html">some</a>
-                        <a class="dropdown-item" href="samplebootstrap.html">music</a>
-                        <a class="dropdown-item" href="samplejs.html">i guess</a>
+                        <a class="dropdown-item" href="https://www.youtube.com/watch?v=tyInv6RWL0Q">here's</a>
+                        <a class="dropdown-item" href="https://www.youtube.com/watch?v=UOxkGD8qRB4">some</a>
+                        <a class="dropdown-item" href="https://www.youtube.com/watch?v=QslJYDX3o8s">music</a>
+                        <a class="dropdown-item" href="https://www.youtube.com/watch?v=NBFuzr_GnqQ">i guess</a>
                     </div>
                 </li>
             </ul>
