--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         <a class="dropdown-item" href="https://www.youtube.com/watch?v=NBFuzr_GnqQ">i guess</a>
                     </div>
                 </li>
+                <li class="nav-item"><a class="nav-link" href="https://media2.giphy.com/media/N436FbUFzzj0Y/source.gif"><em>ty</em></a></li>
             </ul>
         </div>
     </nav>
