--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         <a class="dropdown-item" href="https://www.youtube.com/watch?v=NBFuzr_GnqQ">i guess</a>
                     </div>
                 </li>
+                <!-- meln a tab to Despacito-->
                 <li class = "nav-item"><a class = "nav-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">DeSpACiTo</a></li>
             </ul>
         </div>
@@ -336,6 +337,7 @@
                     (Sube, sube)
                 </p>
             </div>
+            <!-- meln making a grid of pikachus-->
             <div class="img-container">
                 <img src="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png"
                     alt="suprised pikachu" style="width:100%;">
