--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="https://media2.giphy.com/media/N436FbUFzzj0Y/source.gif"><em>ty</em></a></li>
-                 <!-- meln a tab to Despacito-->
+                 <!-- meln a tab to Despacito, not really tho-->
                 <li class = "nav-item"><a class = "nav-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">DeSpACiTo</a></li>
             </ul>
         </div>
