--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
                 <img src="https://www.ssbwiki.com/images/7/7d/SSBUWebsite23.jpg" alt="ssbu bayonetta 3"
                     style="width:100%;">
             </div>
+            <div class="img-container">
+                <img src="https://www.ssbwiki.com/images/7/7d/SSBUWebsite23.jpg" alt="ssbu bayonetta 3"
+                    style="width:100%;">
+            </div>
 
         </div>
 
