--- a/index.html
+++ b/index.html
@@ -398,11 +398,14 @@
                     class="align-self-start mr-3" style="width:200px;" alt="Detective Pikachu Dancing" title="Pikadab!">
             </div>
         </div>
-        <div class="row">aaaaaaaaa</div>
-        <script>
-            let char = new Char();
+        <div class="row">
+            <script>
+                var word1 = "cash";
+                var word2 = "money";
             
-        </script>
+            </script>
+        </div>
+        
 </body>
 
 </html>
