--- a/index.html
+++ b/index.html
@@ -402,6 +402,9 @@
             <script>
                 var word1 = "cash";
                 var word2 = "money";
+                var phrase = word1 + word2;
+                "That's not very " + phrase + " of you."
+                "- Anton"
             
             </script>
         </div>
